# globibot-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  build-artifacts.sh  build.sh  builder.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  release.Dockerfile
builder/: Dockerfile
globibot-bot/: Cargo.toml
globibot-bot/src/: discord.rs  events.rs  main.rs  rpc.rs  web.rs
globibot-core/: Cargo.toml
globibot-core/src/: events.rs  lib.rs  plugin.rs  rpc.rs  transport.rs
globibot-plugin-common/: Cargo.toml
globibot-plugin-common/src/: imageops.rs  lib.rs
globibot-plugin-lang-detect/: Cargo.toml
globibot-plugin-lang-detect/src/: lib.rs  main.rs
globibot-plugin-llm/: Cargo.toml  llm-slash-command.json
globibot-plugin-llm/src/: main.rs  openrouter.rs  personality.rs
globibot-plugin-ping/: Cargo.toml
globibot-plugin-ping/src/: main.rs
globibot-plugin-rateme/: Cargo.toml  rateme-slash-command.json
globibot-plugin-rateme/src/: lib.rs  main.rs  rate.rs
globibot-plugin-slap/: Cargo.toml  slap-slash-command.json
globibot-plugin-slap/src/: lib.rs  main.rs
globibot-plugin-slap/src/scenario/: animated_slap.rs  static_slap.rs
globibot-plugin-tuck/: Cargo.toml  tuck-slash-command.json
globibot-plugin-tuck/src/: lib.rs  main.rs
infra/: globibot.nomad
web/: .prettierrc  Caddyfile  package.json  svelte.config.js  vite.config.ts
web/src/lib/: types.ts
web/src/lib/components/: NavbarPlugins.svelte  PluginCard.svelte
web/src/lib/stores/: plugins.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/src/routes/plugins/[slug]/: +page.svelte  +page.ts
