[workspace]
resolver = "3"
members = [
    "globibot-core",
    "globibot-bot",

    "globibot-plugin-common",

    "globibot-plugin-ping",
    "globibot-plugin-tuck",
    "globibot-plugin-rateme",
    "globibot-plugin-lang-detect",
    "globibot-plugin-slap",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = "0.7"

reqwest = { version = "0.12", features = ["json"]}

futures = "0.3"

thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = "0.3"

tarpc = { version = "0.28", features = ["serde1", "serde-transport"] }

slotmap = { version = "1.1", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3
