[package]
name = "globibot-bot"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default_features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
] }
tokio = { version = "1.5", features = ["time"] }
tokio-util = "0.6"
tokio-serde = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
globibot-core = { path = "../globibot-core" }
serde_json = "1.0"
tarpc = { version = "0.26",  features = ["serde1", "serde-transport"] }
tracing = "0.1"
tracing-subscriber = "0.2"
derive_more = "0.99"
