[package]
name = "globibot-bot"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2021"

[dependencies]
derive_more = "0.99"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
tokio = { version = "1.5", features = ["time", "rt-multi-thread"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = "0.7"

tracing = "0.1"
tracing-subscriber = "0.3"

tarpc = { version = "0.28", features = ["serde1", "serde-transport"] }

globibot-core = { path = "../globibot-core" }
