[package]
name = "globibot-bot"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

[dependencies]
globibot-core = { path = "../globibot-core" }

serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }

tarpc = { workspace = true }

slotmap = { workspace = true }
