[package]
name = "globibot-core"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default_features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
] }
tarpc = { version = "0.26",  features = ["serde1", "serde-transport"] }
tokio = { version = "1.5" }
tokio-util = "0.6"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"
derive_more = "0.99"
thiserror = "1.0"
serde_json = "1.0"
tracing = "0.1"
