[package]
name = "globibot-core"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

tracing = { workspace = true }

tarpc = { workspace = true }

[dependencies.serenity]
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
  "unstable_discord_api",
]
version = "0.12"
