[package]
name = "globibot-plugin-common"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

[dependencies]
image = "0.24"
libwebp-image = "0.3"
gif = "0.11"

rayon = "1.5"

reqwest = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
