[package]
name = "globibot-plugin-lang-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
globibot-core = { path = "../globibot-core" }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
serde_json = { workspace = true }
serde = { workspace = true }
