[package]
name = "globibot-plugin-llm"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
globibot-core = { path = "../globibot-core" }

anyhow = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

itertools = "0.14"

parking_lot = { workspace = true }
