[package]
name = "globibot-plugin-ping"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globibot-core = { path = "../globibot-core" }

tokio = { workspace = true }

parking_lot = { workspace = true }
