[package]
name = "globibot-plugin-rateme"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
globibot-core = { path = "../globibot-core" }
globibot-plugin-common = { path = "../globibot-plugin-common" }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = "1.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
