[package]
name = "globibot-plugin-slap"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.5"
futures = "0.3"
globibot-core = { path = "../globibot-core" }
globibot-plugin-common = { path = "../globibot-plugin-common" }
image = "0.23"
gif = "0.11"
reqwest = "0.11"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
serde_json = "1.0"
rand = "0.8"
