[package]
name = "globibot-plugin-slap"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globibot-core = { path = "../globibot-core" }
common = { package = "globibot-plugin-common", path = "../globibot-plugin-common" }

tokio = "1.5"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1.0"

rand = "0.8"
