[package]
name = "globibot-plugin-tuck"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.5"
futures = "0.3"
globibot-core = { path = "../globibot-core" }
image = "0.23"
gif = "0.11"
reqwest = "0.11"
libwebp-image = "0.2"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1.0"
serde_json = "1.0"
rand = "0.8"
